--- a/demo/(index).html
+++ b/demo/(index).html
@@ -7,27 +7,25 @@
   <script src="brain-0.6.3.js"></script>
   <script src="blackorwhite.js"></script>
 
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-  <title>Train a neural network to recognize color contrast</title>
+  <title>brain.js demo: Train a neural network to recognize color contrast</title>
 </head>
 
 <body>
-    
+    <a href="http://github.com/harthur/brain"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" /></a>
 
-  <div id="desc">Train a neural network to recognize color contrast</div>
+  <div id="desc">brain.js demo - train a neural network to recognize color contrast</div>
 
   <div id="container">
     <div class="section" id="training-box">
       <div class="section-header">
-        chọn một cái bạn có thể đọc dễ dàng !
+        Which one can you read more easily?
       </div>
         <div id="swatches">
-		    <div class="swatch-box">
+        <div class="swatch-box">
             <div id="black-swatch" class="swatch" onclick="trainer.pickSwatch('black');">
               <div class="swatch-text">This one</div>
             </div></div>
-	    <div class="swatch-box">
+      <div class="swatch-box">
             <div id="white-swatch" class="swatch" onclick="trainer.pickSwatch('white');">
               <div class="swatch-text">This one</div>
             </div></div>
@@ -49,39 +47,39 @@
         training network...
       </div>
       <div id="progress-bar">
-	    <div id="progress-completed">
-	    </div>
+      <div id="progress-completed">
+      </div>
       </div>
    </div>
 
     <div class="section" id="testing-box">
       <div id="swatches">
-	      <div id="nn-swatch-box" class="swatch-box">
+        <div id="nn-swatch-box" class="swatch-box">
             <div id="nn-swatch" class="swatch" onclick="tester.viewCode('nn');"
                  title="view neural network code">
               <div class="swatch-text">your neural network</div>
             </div>
             <div class="view-code" onclick="tester.viewCode('nn');">code
-	            <div class="view-code-arrow">&#x25B6;</div>
-  	        </div>
-	      </div>
-	      <div id="wcag-swatch-box" class="swatch-box">
+              <div class="view-code-arrow">&#x25B6;</div>
+            </div>
+        </div>
+        <div id="wcag-swatch-box" class="swatch-box">
           <div id="wcag-swatch" class="swatch"
                onclick="tester.viewCode('wcag');" title="view luminosity code">
           <div class="swatch-text">luminosity algorithm</div>
           </div>
           <div class="view-code" onclick="tester.viewCode('wcag')">code
-	          <div class="view-code-arrow">&#x25B6;</div>
-	        </div>
-	      </div>
+            <div class="view-code-arrow">&#x25B6;</div>
+          </div>
+        </div>
         <div id="yiq-swatch-box" class="swatch-box">
           <div id="yiq-swatch" class="swatch"
                onclick="tester.viewCode('yiq');" title="view yiq code">
                <div class="swatch-text">YIQ formula</div>
           </div>
           <div class="view-code" onclick="tester.viewCode('yiq')">code
-	          <div class="view-code-arrow">&#x25B6;</div>
-	        </div>
+            <div class="view-code-arrow">&#x25B6;</div>
+          </div>
         </div>
       </div>
       <div id="training-buttons">
