--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
   <link rel="stylesheet" href="blackorwhite.css">
 
   <script src="jquery-1.4.2.min.js"></script>
+  <script src="brain-0.6.3.min.js"></script>  
   <script src="brain-0.6.3.js"></script>
   <script src="blackorwhite.js"></script>
 
-  <title>brain.js demo: Train a neural network to recognize color contrast</title>
+  <title>Recognize Color Contrast Trainning Neural NetWork</title>
 </head>
 
 <body>
-    <a href="http://github.com/harthur/brain"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" /></a>
-
-  <div id="desc">brain.js demo - train a neural network to recognize color contrast</div>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <div id="desc">train a neural network to recognize color contrast</div>
 
   <div id="container">
     <div class="section" id="training-box">
       <div class="section-header">
-        Which one can you read more easily?
+        Cái nào bạn thấy có thể dễ nhìn hơn ?
       </div>
         <div id="swatches">
 		    <div class="swatch-box">
             <div id="black-swatch" class="swatch" onclick="trainer.pickSwatch('black');">
-              <div class="swatch-text">This one</div>
+              <div class="swatch-text">Cái này</div>
             </div></div>
 	    <div class="swatch-box">
             <div id="white-swatch" class="swatch" onclick="trainer.pickSwatch('white');">
-              <div class="swatch-text">This one</div>
+              <div class="swatch-text">Hay cái này</div>
             </div></div>
         </div>
         <div id="training-buttons">
