--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="blackorwhite.css">
-
+  importScripts("brain-0.6.3.js");
   <script src="jquery-1.4.2.min.js"></script>
   <script src="brain-0.6.3.min.js"></script>  
   <script src="brain-0.6.3.js"></script>
