--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="brain-0.6.3.min.js"></script>
   <script src="blackorwhite.js"></script>
 
-  <title>Huấn luyện 1 mạng nơ-ron để phân biệt màu sắc tương phản</title>
+  <title>Recognize Color Contrast Trainning Neural NetWork</title>
 </head>
 
 <body>
@@ -20,22 +20,20 @@
       <div class="section-header">
         Cái nào bạn thấy có thể dễ nhìn hơn (chữ trắng hay chữ đen) ?
       </div>
-      <div id="swatches">
+        <div id="swatches">
 		    <div class="swatch-box">
-          <div id="black-swatch" class="swatch" onclick="trainer.pickSwatch('black');">
-            <div class="swatch-text">Cái này</div>
-          </div>
+            <div id="black-swatch" class="swatch" onclick="trainer.pickSwatch('black');">
+              <div class="swatch-text">Cái này</div>
+            </div></div>
+	    <div class="swatch-box">
+            <div id="white-swatch" class="swatch" onclick="trainer.pickSwatch('white');">
+              <div class="swatch-text">Hay cái này</div>
+            </div></div>
         </div>
-        <div class="swatch-box">
-           <div id="white-swatch" class="swatch" onclick="trainer.pickSwatch('white');">
-             <div class="swatch-text">Hay cái này</div>
-          </div>
+        <div id="training-buttons">
+          <span class="pass-button button" onclick="trainer.changeColor();"
+                title="skip">&rarr;</span>
         </div>
-      </div>
-      <div id="training-buttons">
-        <span class="pass-button button" onclick="trainer.changeColor();"
-              title="skip">&rarr;</span>
-      </div>
       <div id="test-box">
         <div id="test-button" onclick="trainer.trainNetwork();" class="button">Train Neural Network</div>
         <div id="subtitle"> Bạn có thể dừng việc huấn luyện khi đã hiện ra box, nhưng càng chọn nhiều giá trị màu thì kết quả sẽ tốt hơn.
@@ -43,32 +41,49 @@
       </div>
     </div>
     <div class="container">
-      <div id="progress-box">
-        <div id="training-message"> training network...</div>
-        <div id="progress-bar">
-          <div id="progress-completed"></div>
-        </div>
+    <div id="progress-box">
+      <div id="training-message">
+        training network...
       </div>
-      <div class="section" id="testing-box">
-        <div id="swatches">
-          <div id="nn-swatch-box" class="swatch-box">
+      <div id="progress-bar">
+	    <div id="progress-completed">
+	    </div>
+      </div>
+    </div>
+    <div class="section" id="testing-box">
+      <div id="swatches">
+	      <div id="nn-swatch-box" class="swatch-box">
             <div id="nn-swatch" class="swatch" onclick="tester.viewCode('nn');"
                  title="view neural network code">
               <div class="swatch-text">Training color</div>
             </div>
-            <div class="view-code" onclick="tester.viewCode('nn');">code
+            <div class="view-code" onclick="tester.viewCode('nn');">Xem code
 	            <div class="view-code-arrow">&#x25B6;</div>
   	        </div>
+	      </div>
+	      <!-- <div id="wcag-swatch-box" class="swatch-box">
+          <div id="wcag-swatch" class="swatch"
+               onclick="tester.viewCode('wcag');" title="view luminosity code">
+          <div class="swatch-text">luminosity algorithm</div>
           </div>
-        </div>
-        <div id="training-buttons">
+          <div class="view-code" onclick="tester.viewCode('wcag')">code
+	          <div class="view-code-arrow">&#x25B6;</div>
+	        </div>
+	      </div> -->
+      </div>
+      <div id="training-buttons">
         <span class="pass-button button" onclick="tester.testRandom();"
               title="next color">&rarr;</span>
-        </div>
       </div>
-      <div id="code-box">
+      <div id="test-box">
+        <div id="test-button" onclick="history.go(0)" class="button1">Thử lại</div>
+      </div>
+      <!-- <FORM>
+      <INPUT TYPE="button" onClick="history.go(0)" VALUE="Thử lại">
+      </FORM> -->
+    </div>
+    <div id="code-box">
       <pre id="code"></pre>
-      </div>
     </div>
   </div>
 </body>
