--- a/index.html
+++ b/index.html
@@ -1,90 +1,105 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="blackorwhite.css">
+    <head>
+    	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<link rel="icon" type="image/png/jpg" href="images/IconTittle.ico">
+		<title>Flights Map</title>
+		
+	    <script src='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.js'></script>
+		<script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
+        <script src="js/leaflet.markercluster.js"></script>
+        <script src="js/L.Control.Locate.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
+        <link href='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.css' rel='stylesheet' />
+		<link rel="stylesheet" href="css/MarkerCluster.Default.css" />	
+		<link rel="stylesheet" href="css/L.Control.Locate.css" />
+			
+		<!--   GeoJSON file    -->
+		<script src="data/airports.geoJson" type="text/javascript"></script>
+		<script src="data/twitters.geoJson" type="text/javascript"></script>
+		<script src="data/feed.js" type="text/javascript"></script>
 
-  <script src="jquery-1.4.2.min.js"></script>
-  <script src="brain-0.6.3.js"></script>
-  <script src="brain-0.6.3.min.js"></script>
-  <script src="blackorwhite.js"></script>
+		<!--	CSS Loader -->
+		<link rel='stylesheet' href='css/MapStyle.css' type="text/css" />
+		<link rel='stylesheet' href='css/clock.css' type="text/css" />
 
-  <title>phân biệt màu sắc tương phản</title>
-</head>
+		<!--	Javascript -->
+		
+		<style>
+		body {padding: 0;margin: 0}
+		@media all and (max-width: 1024px) and(max-height: 100%){
 
-<body>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <div id="desc">Huấn luyện 1 mạng nơ-ron để phân biệt màu sắc tương phản</div>
+		}
+		.se-pre-con {
+			position: fixed;
+			left: 0px;
+			top: 0px;
+			width: 100%;
+			height: 100%;
+			z-index: 9999;
+			background: url(images/Preloader.gif) center no-repeat #fff;
+		}
+		</style>
+    </head>
+    <body>
+    	<div class="se-pre-con"></div>
+    	<div id='container'>
+    	<span style="float:left; padding-left : 204px; padding-top : 10px; display : left">Flight Activity Visualization Integrated With Social Network Information</span>
+    	<div class="clock">
+			<div id="Date"></div>
+  			<ul>
+      			<li id="hours"></li>
+      			<li id="point">:</li>
+      			<li id="min"></li>
+      			<li id="point">:</li>
+      		<li id="sec"></li>
+  			</ul>
+</div>
+    	<div id='panel'>
+    	<div class = 'tweet'>
+    		<span style="float:left;padding-top: 4px; padding-left: 10px;">
+    		<img src="images/Twitterbird.png" alt="Twitter Logo" width="25" height="25"></span>
+    		<span style="float:right; padding-right:95px;padding-top:10px;"><b>TWEETS</b></span>
+		</div>
+    	<div class = 'flip'	>
+                        <a class="twitter-timeline"  href="https://twitter.com/hashtag/Flight" data-widget-id="749451758540165120">#Flight Tweets</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          
+    	</div>
+    	<div class = 'airportinfo'>
+    		<span style="float:left;padding-top: 4px; padding-left: 10px;">
+    		<img src="images/airport-sign.png" alt="Airport Logo" width="25" height="25"></span>
+    		<span style="float:right; padding-right:52px;padding-top:9px;"><b>AIRPORT INFO</b></span>
+    	</div>
+    	<div id = 'info'>
 
-  <div id="container">
-    <div class="section" id="training-box">
-      <div class="section-header">
-        Cái nào bạn thấy có thể dễ nhìn hơn (chữ trắng hay chữ đen) ?
-      </div>
-        <div id="swatches">
-		    <div class="swatch-box">
-            <div id="black-swatch" class="swatch" onclick="trainer.pickSwatch('black');">
-              <div class="swatch-text">Cái này</div>
-            </div></div>
-	    <div class="swatch-box">
-            <div id="white-swatch" class="swatch" onclick="trainer.pickSwatch('white');">
-              <div class="swatch-text">Hay cái này</div>
-            </div></div>
-        </div>
-        <div id="training-buttons">
-          <span class="pass-button button" onclick="trainer.changeColor();"
-                title="skip">&rarr;</span>
-        </div>
-      <div id="test-box">
-        <div id="test-button" onclick="trainer.trainNetwork();" class="button">Train Neural Network</div>
-        <div id="subtitle"> Bạn có thể dừng việc huấn luyện khi đã hiện ra box, nhưng càng chọn nhiều giá trị màu thì kết quả sẽ tốt hơn.
-        </div>
-      </div>
-    </div>
-    <div class="container">
-    <div id="progress-box">
-      <div id="training-message">
-        training network...
-      </div>
-      <div id="progress-bar">
-	    <div id="progress-completed">
-	    </div>
-      </div>
-    </div>
-    <div class="section" id="testing-box">
-      <div id="swatches">
-	      <div id="nn-swatch-box" class="swatch-box">
-            <div id="nn-swatch" class="swatch" onclick="tester.viewCode('nn');"
-                 title="view neural network code">
-              <div class="swatch-text">Training color</div>
-            </div>
-            <div class="view-code" onclick="tester.viewCode('nn');">Xem code
-	            <div class="view-code-arrow">&#x25B6;</div>
-  	        </div>
-	      </div>
-	      <!-- <div id="wcag-swatch-box" class="swatch-box">
-          <div id="wcag-swatch" class="swatch"
-               onclick="tester.viewCode('wcag');" title="view luminosity code">
-          <div class="swatch-text">luminosity algorithm</div>
-          </div>
-          <div class="view-code" onclick="tester.viewCode('wcag')">code
-	          <div class="view-code-arrow">&#x25B6;</div>
-	        </div>
-	      </div> -->
-      </div>
-      <div id="training-buttons">
-        <span class="pass-button button" onclick="tester.testRandom();"
-              title="next color">&rarr;</span>
-      </div>
-      <div id="test-box">
-        <div id="test-button" onclick="history.go(0)" class="button1">Thử lại</div>
-      </div>
-      <!-- <FORM>
-      <INPUT TYPE="button" onClick="history.go(0)" VALUE="Thử lại">
-      </FORM> -->
-    </div>
-    <div id="code-box">
-      <pre id="code"></pre>
-    </div>
-  </div>
-</body>
+    	</div>
+		<div class = 'credit'>
+			<span style="float:left;padding-top: 4px; padding-left: 10px;">
+			<img src="images/uit.png" alt="UIT Logo" width="25" height="25"></span>
+			<span style="float:right; padding-right:101px;padding-top:9px;"><b>CREDIT</b></span>
+		</div>
+		<div class = 'flipcre'>
+		</div>	
+		<div id='map'></div>
+    	</div>
+    	<script src='js/slidetoggle.js'></script>
+		<script src='js/GotMap.js'></script>
+		<script src='js/clock.js'></script>
+		<script src='js/L.Terminator.js'></script>
+		<script>var t = L.terminator();
+t.addTo(map);
+setInterval(function(){updateTerminator(t)}, 500);
+function updateTerminator(t) {
+  var t2 = L.terminator();
+  t.setLatLngs(t2.getLatLngs());
+  t.redraw();
+}</script>
+    </body>
 </html>
+
+
+
