--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 		
 	    <script src='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.js'></script>
 		<script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
+        <link rel="stylesheet" href="https://js.arcgis.com/3.17/esri/css/esri.css">
         <script src="js/leaflet.markercluster.js"></script>
         <script src="js/L.Control.Locate.js"></script>
+        <script src='js/leaflet-search.src.js'></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/fuse.js/1.2.2/fuse.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
@@ -18,13 +21,14 @@
 		<link rel="stylesheet" href="css/L.Control.Locate.css" />
 			
 		<!--   GeoJSON file    -->
-		<script src="data/airports.geoJson" type="text/javascript"></script>
-		<script src="data/twitters.geoJson" type="text/javascript"></script>
+		<script src="data/airports.js" type="text/javascript"></script>
+		<script src="data/twitters.js" type="text/javascript"></script>
 		<script src="data/feed.js" type="text/javascript"></script>
 
 		<!--	CSS Loader -->
 		<link rel='stylesheet' href='css/MapStyle.css' type="text/css" />
 		<link rel='stylesheet' href='css/clock.css' type="text/css" />
+        <link rel='stylesheet' href='css/leaflet-search.src.css' type="text/css" />
 
 		<!--	Javascript -->
 		
@@ -65,9 +69,20 @@
     		<span style="float:right; padding-right:95px;padding-top:10px;"><b>TWEETS</b></span>
 		</div>
     	<div class = 'flip'	>
-                        <a class="twitter-timeline"  href="https://twitter.com/hashtag/Flight" data-widget-id="749451758540165120">#Flight Tweets</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          
+            <a class="twitter-timeline"  href="https://twitter.com/search?q=flight" data-widget-id="749451758540165120">Flight Tweets</a>
+            <script>
+            !function(d,s,id){
+                var js,fjs=d.getElementsByTagName(s)[0],
+                p=/^http:/.test(d.location)?'http':'https';
+                if(!d.getElementById(id)){
+                    js=d.createElement(s);
+                    js.id=id;
+                    js.src=p+"://platform.twitter.com/widgets.js";
+                    fjs.parentNode.insertBefore(js,fjs);
+                }
+            }
+            (document,"script","twitter-wjs");
+            </script>
     	</div>
     	<div class = 'airportinfo'>
     		<span style="float:left;padding-top: 4px; padding-left: 10px;">
@@ -83,21 +98,25 @@
 			<span style="float:right; padding-right:101px;padding-top:9px;"><b>CREDIT</b></span>
 		</div>
 		<div class = 'flipcre'>
-		</div>	
+		</div>
+        <div id="search"></div>	
 		<div id='map'></div>
     	</div>
     	<script src='js/slidetoggle.js'></script>
 		<script src='js/GotMap.js'></script>
 		<script src='js/clock.js'></script>
 		<script src='js/L.Terminator.js'></script>
-		<script>var t = L.terminator();
-t.addTo(map);
-setInterval(function(){updateTerminator(t)}, 500);
-function updateTerminator(t) {
-  var t2 = L.terminator();
-  t.setLatLngs(t2.getLatLngs());
-  t.redraw();
-}</script>
+		<script>
+        var t = L.terminator();
+        t.addTo(map);
+        setInterval(function(){updateTerminator(t)}, 500);
+        function updateTerminator(t) {
+        var t2 = L.terminator();
+        t.setLatLngs(t2.getLatLngs());
+        t.redraw();
+        }
+        </script>
+
     </body>
 </html>
 
